parser/parser.parser.output
Terminals unused in grammar

   "error token"


Grammar

    0 $accept: root $end

    1 root: statement_list

    2 statement_list: statement_list statement
    3               | %empty

    4 statement: ";"
    5          | expression ";"

    6 expression: lvalue
    7           | rvalue
    8           | lvalue "=" expression
    9           | expression "+" expression
   10           | expression "-" expression
   11           | expression "*" expression
   12           | expression "/" expression
   13           | expression "%" expression
   14           | expression "&" expression
   15           | expression "|" expression
   16           | expression "^" expression
   17           | "+" expression
   18           | "-" expression
   19           | "~" expression

   20 lvalue: ID

   21 rvalue: constant

   22 constant: "integer"


Terminals, with rules where they appear

$end (0) 0
error (256)
";" (258) 4 5
"=" (259) 8
"+" (260) 9 17
"-" (261) 10 18
"*" (262) 11
"/" (263) 12
"%" (264) 13
"&" (265) 14
"|" (266) 15
"^" (267) 16
"~" (268) 19
"integer" <integer> (269) 22
ID <str> (270) 20
"error token" (271)
UPLUS (272)
UMIN (273)


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
root (20)
    on left: 1, on right: 0
statement_list <node> (21)
    on left: 2 3, on right: 1 2
statement <node> (22)
    on left: 4 5, on right: 2
expression <node> (23)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19, on right: 5 8 9
    10 11 12 13 14 15 16 17 18 19
lvalue <node> (24)
    on left: 20, on right: 6 8
rvalue <node> (25)
    on left: 21, on right: 7
constant <node> (26)
    on left: 22, on right: 21


State 0

    0 $accept: . root $end

    $default  reduce using rule 3 (statement_list)

    root            go to state 1
    statement_list  go to state 2


State 1

    0 $accept: root . $end

    $end  shift, and go to state 3


State 2

    1 root: statement_list .
    2 statement_list: statement_list . statement

    ";"        shift, and go to state 4
    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    $default  reduce using rule 1 (root)

    statement   go to state 10
    expression  go to state 11
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 3

    0 $accept: root $end .

    $default  accept


State 4

    4 statement: ";" .

    $default  reduce using rule 4 (statement)


State 5

   17 expression: "+" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 15
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 6

   18 expression: "-" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 16
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 7

   19 expression: "~" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 17
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 8

   22 constant: "integer" .

    $default  reduce using rule 22 (constant)


State 9

   20 lvalue: ID .

    $default  reduce using rule 20 (lvalue)


State 10

    2 statement_list: statement_list statement .

    $default  reduce using rule 2 (statement_list)


State 11

    5 statement: expression . ";"
    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    ";"  shift, and go to state 18
    "+"  shift, and go to state 19
    "-"  shift, and go to state 20
    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23
    "&"  shift, and go to state 24
    "|"  shift, and go to state 25
    "^"  shift, and go to state 26


State 12

    6 expression: lvalue .
    8           | lvalue . "=" expression

    "="  shift, and go to state 27

    $default  reduce using rule 6 (expression)


State 13

    7 expression: rvalue .

    $default  reduce using rule 7 (expression)


State 14

   21 rvalue: constant .

    $default  reduce using rule 21 (rvalue)


State 15

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression
   17           | "+" expression .

    $default  reduce using rule 17 (expression)


State 16

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression
   18           | "-" expression .

    $default  reduce using rule 18 (expression)


State 17

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression
   19           | "~" expression .

    $default  reduce using rule 19 (expression)


State 18

    5 statement: expression ";" .

    $default  reduce using rule 5 (statement)


State 19

    9 expression: expression "+" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 28
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 20

   10 expression: expression "-" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 29
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 21

   11 expression: expression "*" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 30
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 22

   12 expression: expression "/" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 31
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 23

   13 expression: expression "%" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 32
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 24

   14 expression: expression "&" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 33
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 25

   15 expression: expression "|" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 34
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 26

   16 expression: expression "^" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 35
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 27

    8 expression: lvalue "=" . expression

    "+"        shift, and go to state 5
    "-"        shift, and go to state 6
    "~"        shift, and go to state 7
    "integer"  shift, and go to state 8
    ID         shift, and go to state 9

    expression  go to state 36
    lvalue      go to state 12
    rvalue      go to state 13
    constant    go to state 14


State 28

    9 expression: expression . "+" expression
    9           | expression "+" expression .
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23

    $default  reduce using rule 9 (expression)


State 29

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   10           | expression "-" expression .
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23

    $default  reduce using rule 10 (expression)


State 30

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   11           | expression "*" expression .
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    $default  reduce using rule 11 (expression)


State 31

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   12           | expression "/" expression .
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    $default  reduce using rule 12 (expression)


State 32

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   13           | expression "%" expression .
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    $default  reduce using rule 13 (expression)


State 33

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   14           | expression "&" expression .
   15           | expression . "|" expression
   16           | expression . "^" expression

    "+"  shift, and go to state 19
    "-"  shift, and go to state 20
    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23

    $default  reduce using rule 14 (expression)


State 34

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   15           | expression "|" expression .
   16           | expression . "^" expression

    "+"  shift, and go to state 19
    "-"  shift, and go to state 20
    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23
    "&"  shift, and go to state 24

    $default  reduce using rule 15 (expression)


State 35

    9 expression: expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression
   16           | expression "^" expression .

    "+"  shift, and go to state 19
    "-"  shift, and go to state 20
    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23
    "&"  shift, and go to state 24
    "|"  shift, and go to state 25

    $default  reduce using rule 16 (expression)


State 36

    8 expression: lvalue "=" expression .
    9           | expression . "+" expression
   10           | expression . "-" expression
   11           | expression . "*" expression
   12           | expression . "/" expression
   13           | expression . "%" expression
   14           | expression . "&" expression
   15           | expression . "|" expression
   16           | expression . "^" expression

    "+"  shift, and go to state 19
    "-"  shift, and go to state 20
    "*"  shift, and go to state 21
    "/"  shift, and go to state 22
    "%"  shift, and go to state 23
    "&"  shift, and go to state 24
    "|"  shift, and go to state 25
    "^"  shift, and go to state 26

    $default  reduce using rule 8 (expression)
